# vehicle_recognition

./: .gitignore  Bgsub.cpp  Bgsub.h  CMakeLists.txt  bgsub.cpp  contours.cpp  vehicle_recognition.cpp
include/: Bgsub.h
src/: Bgsub.cpp  bgsub.cpp  contours.cpp  frame_saver.cpp  test_contours.cpp  vehicle_recognition.cpp
