cmake_minimum_required(VERSION 2.8)
project( bgsub )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ../bgsub bgsub.cpp )
target_link_libraries( ../bgsub ${OpenCV_LIBS} )
add_executable( ../bgfg bgfg_codebook.cpp )
target_link_libraries( ../bgfg ${OpenCV_LIBS} )
add_executable( ../vehicle_recognition vehicle_recognition.cpp )
target_link_libraries( ../vehicle_recognition ${OpenCV_LIBS} )