cmake_minimum_required(VERSION 2.8)
project( bgsub )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ../bin/bgsub bgsub.cpp )
target_link_libraries( ../bin/bgsub ${OpenCV_LIBS} )
add_executable( ../bin/bgfg bgfg_codebook.cpp )
target_link_libraries( ../bin/bgfg ${OpenCV_LIBS} )
add_executable( ../bin/vehicle_recognition vehicle_recognition.cpp Bgsub.cpp)
target_link_libraries( ../bin/vehicle_recognition ${OpenCV_LIBS} )
add_executable( ../bin/contours contours.cpp )
target_link_libraries( ../bin/contours ${OpenCV_LIBS} )